@@ -1,6 +1,7 @@
 --------------------------
 Changes in 1.9 (not yet released)
 
+- Add function ISceneManager::clearAllRegisteredNodesForRendering.
 - Add function IVideoDriver::queryTextureFormat to allow checking if a driver supports textures with a specific color format.
 - ISceneManager::getMesh can now creates meshes with alternative cache-names.
 - Lets the BSP loader find textures inserted with relative paths. Thx@ curaga for patch
